# vocabTreeSift

./: README.md
ocv_sift_detector/: CMakeLists.txt  detector_cv2.cpp  detector_cv3.cpp
vocabSiftTree/VocabBuildDB/: VocabBuildDB  VocabBuildDB.vcproj
vocabSiftTree/VocabLearn/: Makefile  VocabLearn  VocabLearn.vcproj
vocabSiftTree/VocabLib/: Makefile  VocabLib.vcproj
vocabSiftTree/VocabMatch/: VocabMatch  VocabMatch.vcproj  VocabMatchScript  VocabMatchScript_desc  VocabMatch_desc
vocabSiftTree/example/: list_db.txt  list_db_ld.txt  list_queries.txt  matches.txt  script.linux.sh  tree_4_8.out  tree_db_4_8.out
vocabSiftTree/example/db/: bottle1.jpg.key  bottle2.jpg.key  bottle3.jpg.key  bottle4.jpg.key  box1.jpg.key  box2.jpg.key  box3.jpg.key  box4.jpg.key  headphone1.jpg.key  headphone2.jpg.key  headphone3.jpg.key  headphone4.jpg.key  mouse1.jpg.key  mouse2.jpg.key  mouse3.jpg.key  mouse4.jpg.key  speaker1.jpg.key  speaker2.jpg.key  speaker3.jpg.key  speaker4.jpg.key  wallet1.jpg.key  wallet2.jpg.key  wallet3.jpg.key  wallet4.jpg.key  watch1.jpg.key  watch2.jpg.key  watch3.jpg.key  watch4.jpg.key
vocabSiftTree/example/queries/: bottle5.jpg.key  box5.jpg.key  headphone5.jpg.key  mouse5.jpg.key  speaker5.jpg.key  wallet5.jpg.key  watch5.jpg.key
vocabSiftTree/lib/ann_1.1/: Make-config  lib
vocabSiftTree/lib/ann_1.1/MS_Win32/: UpgradeLog.XML
vocabSiftTree/lib/ann_1.1_char/: Make-config  ann_1.1_char.vcproj  lib
vocabSiftTree/scripts/: createdbldlist.sh  createdblist.sh  createquerieslist.sh  ocvsift.sh
vocabSiftTree/src/: VocabCombine  VocabCompare
(+4 files in other folders)
