cmake_minimum_required(VERSION 2.8)
project( ocv_sift_detector )
find_package( OpenCV REQUIRED )
SET(CMAKE_BUILD_TYPE "Release")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
file(GLOB SOURCE_FILES ./detector.cpp)
add_executable( ocv_sift_detector ${SOURCE_FILES})
target_link_libraries( ocv_sift_detector ${OpenCV_LIBS} )
INSTALL(TARGETS ocv_sift_detector DESTINATION ~/bin)
